Add awaiting input indication for R/P/S